envoy-gateway/EnvoyPatch/ratelimit-headless-service.yaml
# This's a demo EnvoyPatchPolicy to patch the ratelimit cluster to use headless service for better load balancing.
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: ratelimit
    app.kubernetes.io/managed-by: envoy-gateway
    app.kubernetes.io/name: envoy-ratelimit
  name: envoy-ratelimit-headless
  namespace: envoy-gateway-system
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: metrics
      port: 19001
      protocol: TCP
      targetPort: 19001
  selector:
    app.kubernetes.io/component: ratelimit
    app.kubernetes.io/managed-by: envoy-gateway
    app.kubernetes.io/name: envoy-ratelimit
  sessionAffinity: None
  type: ClusterIP
