envoy-gateway/EnvoyPatch/patch-all-listener.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: merge-gateways
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: merge-gateways
    namespace: default
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gtw-1
spec:
  gatewayClassName: merge-gateways
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gtw-2
spec:
  gatewayClassName: merge-gateways
  listeners:
    - name: http
      protocol: HTTP
      port: 81
---
