envoy-gateway/EnvoyPatch/patch-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gtw-1
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: http-8080
      protocol: HTTP
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gtw-1
      sectionName: http
  rules:
    - backendRefs:
        - kind: Service
          name: backend
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
